bk_ida/sjengida/c0/setup_attackers
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/setup_attackers/src/see.c:502:8: error: use of undeclared identifier 'setup_attackers_rook_o'
a_sq = setup_attackers_rook_o[i] + square; 
       ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/setup_attackers/src/see.c:532:9: error: use of undeclared identifier 'setup_attackers_rook_o'
a_sq += setup_attackers_rook_o[i]; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/setup_attackers/src/see.c:538:9: error: use of undeclared identifier 'setup_attackers_bishop_o'
a_sqa = setup_attackers_bishop_o[ia] + square; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/setup_attackers/src/see.c:580:10: error: use of undeclared identifier 'setup_attackers_bishop_o'
a_sqa += setup_attackers_bishop_o[ia]; 
         ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/setup_attackers/src/see.c:586:9: error: use of undeclared identifier 'setup_attackers_knight_o'
a_sqb = setup_attackers_knight_o[ib] + square; 
        ^
5 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/setup_attackers/src/obj/see.o] Error 1
